Make sure the image isn’t too large

--- a/src/styles/_fullscreen.scss
+++ b/src/styles/_fullscreen.scss
@@ -27,6 +27,8 @@ $fullscreen-text-contrast-color: $themeColor;
     position: absolute;
     min-width: 100%;
     min-height: 100%;
+    max-height: 100%;
+    max-width: 100%;
 
     &-fade {
       z-index: 110;
